--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apollo-boost": "^0.4.8",
+    "classnames": "^2.2.6",
     "graphql": "^15.0.0",
+    "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "react-scripts": "3.4.1"
   },
   "scripts": {
