--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "graphql": "^15.0.0",
     "moment": "^2.25.3",
+    "particles-bg": "^2.5.0",
     "react": "^16.13.1",
     "react-countdown": "^2.2.1",
     "react-dom": "^16.13.1",
